--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p style="color: #939598;">The demand for coding skills is skyrocketing, and not just for developers — programming is playing a bigger role in every career path.<br> Add the right technical skills to your résumé so you can pursue a more fulfilling career.</p>
     
-    <pstyle="text-transform: uppercase;><a target="_blank" href="https://google.com">go pro</a></p>
+    <p style= "text-transform: uppercase;" > <a target="_blank" href="https://google.com">go pro</a></p>
 
 </body>
 </html>
